--- a/ASFItemDropper/ASFItemDropper.csproj
+++ b/ASFItemDropper/ASFItemDropper.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="System.Composition.AttributedModel" Version="*" />
   </ItemGroup>
 
