--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Publish
-        run: dotnet publish -c "Release" -f "netcoreapp3.1" -o "out/generic" "/p:LinkDuringPublish=false"
+        run: |
+          dotnet publish -c "Release" -f "netcoreapp3.1" -o "out/generic" "/p:LinkDuringPublish=false"
+          tar c out/generic/ASFItemDropper.* > ASFItemDropper.tar
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v2.1.4
         with:
@@ -35,7 +37,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
-          tag_name: ${{ github.ref }}
+          tag_name: Tag°${{ github.ref }}
           release_name: Release ${{ github.ref }}
           body: WIP
           draft: false
@@ -47,6 +49,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-          asset_path: out/generic/ASFItemDropper*
-          asset_name: ASF-ItemDropper.zip
-          asset_content_type: application/zip
+          asset_path: ASFItemDropper.tar
+          asset_name: ASFItemDropper.tar
+          asset_content_type: application/tar
